Alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,5 +101,5 @@ h6 {
 }
 
 .footer-icon {
-  padding: 2%;
+  padding: 2% 3% 15%;
 }
